# urirun-connector-twin

./: CHANGELOG.md  Makefile  SUMD.md  SUMR.md  TODO.md  local.dev.txt  planfile.yaml  project.sh  pyproject.toml
.github/workflows/: ci.yml  integration-urirun-llm.yml
project/: README.md  analysis.toon.yaml  calls.mmd  calls.toon.yaml  calls.yaml  compact_flow.mmd  context.md  duplication.toon.yaml  evolution.toon.yaml  flow.mmd  index.html  logic.pl  map.toon.yaml  mermaid.export  planfile-tickets.yaml  project.toon.yaml
scripts/: ci_urirun_llm_smoke.py
tests/: test_browser_session.py  test_dispatch.py  test_recall_routes.py  test_session.py  test_twin_connector.py
urirun_connector_twin/: __init__.py  _dispatch.py  _urirun_compat.py  browser.py  contracts.py  core.py  dispatch.py  environment.py  experience.py  mock.py  planner.py  prompt_plan.py  session.py
urirun_connector_twin.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
