[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "urirun-connector-twin"
version = "0.1.0"
description = "Digital Twin connector for urirun — environment probe, imperative plan generation, Docker mock fallback"
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "if-uri" }]
dependencies = [
  "urirun @ git+https://github.com/if-uri/urirun.git#subdirectory=adapters/python",
]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
urirun-connector-twin = "urirun_connector_twin.core:main"

[project.entry-points."urirun.bindings"]
twin = "urirun_connector_twin.core:bindings"

[tool.setuptools.packages.find]
where = ["."]
include = ["urirun_connector_twin*"]
